error.log
> feedeliza-plus@1.0.0 start
> node backend/server.js
rewardsController at module.exports entry: {
  listRewards: [AsyncFunction: listRewards],
  getRewardById: [AsyncFunction: getRewardById],
  createReward: [AsyncFunction: createReward],
  updateReward: [AsyncFunction: updateReward],
  deleteReward: [AsyncFunction: deleteReward],
  spinWheel: [AsyncFunction: spinWheel],
  getRewardsAnalytics: [AsyncFunction: getRewardsAnalytics]
}
rewardsController.listRewards before router.get: [AsyncFunction: listRewards]
/app/backend/src/domains/qrcode/qrcode.controller.js:23
        };
         ^
SyntaxError: Unexpected token ';'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at module.exports (/app/backend/src/domains/qrcode/qrcode.routes.js:7:30)
    at module.exports (/app/backend/routes/index.js:64:78)
    at Object.<anonymous> (/app/backend/server.js:62:1)
Node.js v20.19.5